Added via_waypoint index extension for mapbox and valhalla flavor
